deployment/express_api/service.yml
apiVersion: v1
kind: Service
metadata:
  name: express-api-service
spec:
  selector:
    app: express-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 4001
  type: ClusterIP
