deployment/express_api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expressapi-ingress
  namespace: benchmark
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: "expressapi-group"
spec:
  rules:
    - host: expressapi.kotakcherry.com  # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-api-service  # The name of your service
                port:
                  number: 8081  # The port on which your express API is running
